--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.04  Wed, 22 Apr 2009 07:42:32 +0200
+  * Make -also accept a plain string instead of only an array ref.
+
 0.03  Sat, 18 Apr 2009 11:43:10 +0200
   * Changes dependeny of Class::MOP to 0.80, this is the first version
     with class_of.
