Import of FLORA/namespace-autoclean-0.06 from CPAN.
gitpan-cpan-distribution: namespace-autoclean
gitpan-cpan-version:      0.06
gitpan-cpan-path:         FLORA/namespace-autoclean-0.06.tar.gz
gitpan-cpan-author:       FLORA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.06  Wed, 20 May 2009 15:14:36 +0200
+ * Allow selection of explicit cleanee (Shawn M Moore).
+
 0.05  Fri, 01 May 2009 12:44:25 +0200
   * Don't clean the 'meta' method for Moose roles, even if it's not
     included in get_method_list.
