Import of FLORA/namespace-autoclean-0.11 from CPAN.
gitpan-cpan-distribution: namespace-autoclean
gitpan-cpan-version:      0.11
gitpan-cpan-path:         FLORA/namespace-autoclean-0.11.tar.gz
gitpan-cpan-author:       FLORA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.11  Fri, 07 May 2010 19:32:37 +0200
+  * Improve distribution metadata.
+
 0.10  Sat, 01 May 2010 20:32:59 +0200
   * Fix documentation typo ( Andrew Rodland).
 
