--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.1204  Fri, 03 Aug 2011 00:01:00 +0000
+  * do not break overload for Moose 
+
+0.1203  Fri, 03 Aug 2011 00:00:00 +0000
+  * protect against false double scope scope end
+  * do not break overload for Mouse
+
 0.1202  Thu, 28 Jul 2011 22:05:00 -0800
   * Support Mouse; requires Package::Stash and Sub::Identify
 
