Import of BOBTFISH/namespace-autoclean-0.13 from CPAN.
gitpan-cpan-distribution: namespace-autoclean
gitpan-cpan-version:      0.13
gitpan-cpan-path:         BOBTFISH/namespace-autoclean-0.13.tar.gz
gitpan-cpan-author:       BOBTFISH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,15 +1,7 @@
-0.1204  Fri, 03 Aug 2011 00:01:00 +0000
-  * do not break overload for Moose 
-
-0.1203  Fri, 03 Aug 2011 00:00:00 +0000
-  * protect against false double scope scope end
-  * do not break overload for Mouse
-
-0.1202  Thu, 28 Jul 2011 22:05:00 -0800
-  * Support Mouse; requires Package::Stash and Sub::Identify
-
-0.1201  Wed, 27 Jul 2011 00:00:00 +0000
-  * Add -except
+0.13  Wed, 24 Aug 2010 09:33:00 +0000
+  * Fix issue in dist.ini which was causing links to be incorrectly generated.
+  * Re-package to remove BEGIN { $VERSION hackery by using a newer
+    Dist-Zilla.
 
 0.12  Fri, 04 Feb 2010 10:39:00 +0000
   * Bump namespace::clean dep to 0.20 to pull in the bugfix for
